fix: fix spotlight cards styles margins breaking on mobile.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3994,11 +3994,13 @@ img#blog_image {
 
 .decrypt_label {
   padding-bottom: 1rem;
+  font-size: 14px;
 }
 
 .decrypt_ul {
   text-align: left;
   margin-left: 11%;
+  font-size: 14px;
 }
 
 .technology_h3 {
